--- a/android/build.gradle
+++ b/android/build.gradle
@@ -64,4 +64,5 @@ android {
 
 dependencies {
   implementation "com.facebook.react:react-android"
+  implementation "com.google.android.play:asset-delivery:2.3.0"
 }
