--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -78,6 +78,7 @@ android {
     compileSdk rootProject.ext.compileSdkVersion
 
     namespace "dynamicresourceloader.example"
+    assetPacks = [":kichilogo"]
     defaultConfig {
         applicationId "dynamicresourceloader.example"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -110,6 +111,7 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation("com.google.android.play:asset-delivery:2.3.0")
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
